// define o esquema do banco de dados usando DBML (Database Markup Language).
// https://dbdiagram.io/d/EsquemaER-Sistema-Penitenciario-67d0580e75d75cc844af26a2

// define o esquema do banco de dados usando DBML (Database Markup Language).
// https://dbdiagram.io/d/EsquemaER-Sistema-Penitenciario-67d0580e75d75cc844af26a2

Table Detento {
    cpf varchar(11) [primary key, not null]
    comportamento varchar(30)
    data_ent date [not null]
    data_saida date
    sexo char(1) [not null, note: "CHECK (sexo IN ('F', 'M'))"]
    data_nasc date [not null]
    nome varchar(30) [not null]
}

Table Sentenca {
    crime varchar(30) [not null]
    cpf_detento varchar(11) [not null]
    duracao integer [not null]
    primary key (crime, cpf_detento)
}

Table Visitante {
    nome varchar(30) [not null]
    sexo char(1) [not null, note: "CHECK (sexo IN ('F', 'M'))"]
    data_nasc date [not null]
    malfeitor varchar(11) [not null]
    primary key (nome, malfeitor)
}

Table Tipo_Cela {
    tipo_cela varchar(30) [primary key]
    capacidade integer [not null, note: "CHECK (capacidade BETWEEN 1 AND 10)"]
}

Table Cela {
    id_cela integer [primary key]
    tipo varchar(15) [not null, note: "CHECK (tipo IN ('SOLITARIA', 'REGULAR'))"]
}

Table Endereco {
    cep varchar(10) [primary key]
    rua varchar(30) [not null]
    numero integer [not null]
    bairro varchar(30) [not null]
}

Table Funcionario {
    cpf varchar(11) [primary key]
    nome varchar(30) [not null]
    data_nasc date [not null]
    sexo char(1) [not null, note: "CHECK (sexo IN ('F', 'M'))"]
    salario integer [not null]
    data_admi date [not null]
    cep varchar(10) [not null]
}

Table Diretor {
    cpf_f varchar(11) [unique, not null]
    data_inicio date [not null]
}

Table Superintendente {
    cpf_f varchar(11) [primary key]
    bonificacao integer [not null]
    diretor integer [not null]
}

Table Ala {
    id integer [primary key]
    tipo char(1) [not null, note: "CHECK (tipo IN ('F', 'M'))"]
    nivel_seg varchar(15) [not null, note: "CHECK (nivel_seg IN ('MAXIMA', 'MEDIA', 'PADRAO'))"]
    autoridade varchar(11) [unique, not null]
}

Table Telefone {
    id integer [primary key]
    telefone varchar(15) [unique, not null]
    funcionario varchar(11) [not null]
}

Table Guarda {
    cpf_f varchar(11) [primary key]
    turno varchar(11) [not null, note: "CHECK (turno IN ('NOTURNO', 'MATUTINO', 'VESPERTINO'))"]
    supervisionado varchar(11)
}

Table Sala_visita {
    id integer [primary key]
}

Table Visita {
    motivo varchar(30) [not null, note: "CHECK (motivo IN ('Amigo(a)', 'Parente', 'Conjuge', 'Outro(a)'))"]
    malfeitor varchar(11) [primary key]
    data_hora date [not null]
    visitante varchar(30) [not null]
    sala_visita integer [not null]
}

Table Possui {
    malfeitor varchar(11) [primary key]
    cela integer [not null]
    ala integer [not null]
}

Ref: Sentenca.cpf_detento > Detento.cpf
Ref: Visitante.malfeitor > Detento.cpf
Ref: Cela.tipo > Tipo_Cela.tipo_cela
Ref: Funcionario.cep > Endereco.cep
Ref: Diretor.cpf_f > Funcionario.cpf
Ref: Superintendente.cpf_f > Funcionario.cpf
Ref: Ala.autoridade > Superintendente.cpf_f
Ref: Telefone.funcionario > Funcionario.cpf
Ref: Guarda.supervisionado > Guarda.cpf_f
Ref: Guarda.cpf_f > Funcionario.cpf
Ref: Visita.malfeitor > Detento.cpf
Ref: Visita.sala_visita > Sala_visita.id
Ref: Visita.visitante > Visitante.nome
Ref: Visita.malfeitor > Visitante.malfeitor
Ref: Possui.malfeitor > Detento.cpf
Ref: Possui.cela > Cela.id_cela
Ref: Possui.ala > Ala.id
Ref: Superintendente.diretor > Diretor.cpf_f



Ref: "Funcionario"."cpf" < "Visita"."sala_visita"